--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -162,6 +162,8 @@ Date written: 16/02/2018
 	\item work with the iCE stick, see if all Verilog project files could be transferred onto that development board.
 	\item Order in a USB 1.1 PHY transceiver from \href{https://au.mouser.com/Semiconductors/Interface-ICs/USB-Interface-IC/_/N-45lw3Z1yzvvqx?P=1yxy7lq&pop=3nh2d&Ns=Pricing|0}{au.Mouser.com} or another retailer.
 	\item Instantiate a USB 1.1 PHY following \href{http://www.xess.com/projects/fpga-usb-v2-project/}{this guide}
+	\item Test experiment using Wireshark and WinPcap
+	\item Research into SMD/SMT and prototyping solutions. Items to consider: Prototyping Boards, Bread boards, Chip 
 \end{enumerate}
 
 \subsection{Experiment Setup}
